# acPapComr

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.dbg  sdkconfig.defaults  sdkconfig.efu  sdkconfig.ram
boards/esp32_ep/: board_cfg.h  partition.csv  sdkconfig
boards/esp32s2_ep/: board_cfg.h  sdkconfig
boards/esp32s2_rc1/: board_cfg.h  partition.csv  sdkconfig
bootloader_components/hook/: CMakeLists.txt  hooks.c
components/espressif__esp_lcd_ssd1681/: CMakeLists.txt  esp_lcd_panel_ssd1681.c  esp_lcd_ssd1681_commands.h
components/espressif__esp_lcd_ssd1681/include/: esp_lcd_panel_ssd1681.h
main/: CMakeLists.txt  appVersion.h.in  idf_component.yml  main.cpp
main/inc/: buttons.hpp  someGeneric.hpp  storage.hpp  telnet.h
main/src/: buttons.cpp  logUtil.cpp  storage.cpp  telnet.c  uiEngine.c  wifi.c
